[package]
name = "i3wm_switch_windows"
authors = ["shuieryin"]
version = "0.1.1"
edition = "2021"
description = "Switching windows across workspaces and monitors"
license = "MIT"
repository = "https://github.com/shuieryin/i3wm_switch_windows.git"

[dependencies]
tokio-i3ipc = "0.16.0"
tokio = "1.37.0"