[package]
name = "i3wm_switch_windows"
authors = ["shuieryin"]
version = "0.3.0"
edition = "2021"
description = "Switching windows (including floating windows) across workspaces and monitors"
license = "MIT"
repository = "https://github.com/shuieryin/i3wm_switch_windows.git"

[dependencies]
tokio-i3ipc = "0.16.0"
tokio = "1.37.0"
lazy_static = "1.4.0"